Última clase de Forense completa

--- a/HFC/Forense/apuntes/HFC21_11_2024.md
+++ b/HFC/Forense/apuntes/HFC21_11_2024.md
@@ -215,7 +215,82 @@ Ahora podemos analizar la actividad en nuestro sistema de archivos, almacenada e
 
 ### Acceso al sistema
 
+#### Inicios de sesión
+
+> Existen 2 **bitácoras** principales en el sistema acerca de los accesos a este, `wtmp` para inicios de sesión exitosos y `btmp` para inicios de sesión fallidos.
+
+Ambas bitácoras se encuentran en el directorio `/var/log/` y podemos consultarlas con ayuda del comando `last`, ademas de apoyarnos en las siguientes opciones:
+
+- `-f`: Indica que archivo analizar
+- `-a`: Despliega el **host remoto** en la última columna
+- `-i`: Muestra el host remoto como dirección *IP*
+- `-F`: Muestra las fechas de inicio de sesión en **formato completo**
+
+Además, si no se le indica ningún archivo, `last` muestra `wtmp` por defecto
+
+```bash
+# Inicios de sesión exitosos
+last -aiF
+
+# Inicios de sesión fallidos
+last -aiF -f /var/log/btmp
+```
+
+#### Sesiones remotas y `su`
+
+Por otra parte, los accesos remotos exitosos y fallidos al sistema, y las ejecuciones del comando `su`, se registran en `/var/log/auth.log` para sistemas *Debian* o `/var/log/secure` para sistemas *Red Hat*.
+
 ### Servicios web
+
+La **bitácoras de los servicios *web*** pueden ser parte fundamental en la investigación de un incidente de seguridad.
+
+Por ejemplo, para un **servidor *http* Apache**, existen 2 tipos de registros que deben revisarse:
+
+- ***Bitácora de errores***: `/var/log/apache2/error_log`
+- ***Bitácora de acceso***: `/var/log/apache2/access_log`
+
+Estos registros, muestran la actividad usual del servidor, rastros de actividad maliciosa, desde ataques *DDoS*, pasando por inyecciones *SQL*, aataques *XXS*, uso de *Webshell*, entre otros.
+
+El formato de las entradas en la **bitácora de acceso** se define en el archivo de configuración de *Apache*, usualmente en `/etc/apache2/apache2.conf`.
+
+#### Formato común
+
+> `LogFormat "%h %l %u %t \"%r\" %>s %b" common`
+
+Donde:
+
+| Símbolos | Representación                                                                                     |
+| -------- | -------------------------------------------------------------------------------------------------- |
+| **%h**   | Dirección *IP* del cliente                                                                         |
+| **%l**   | *"Identificador remoto del cliente"*, ya obsoleto por lo que *Apache* simplemente coloca un "-"    |
+| **%u**   | Identificador del usuario que solicita el recurso                                                  |
+| **%t**   | Hora en la que se recibe la petición en formato `[dia/mes/año:hora:minuto:segundo <zona horaria>]` |
+| **%r**   | Petición del cliente                                                                               |
+| **%>s**  | Código de respuesta *HTTP*                                                                         |
+| **%b**   | Tamaño del objeto retornado                                                                        |
+
+Por ejemplo:
+
+```log
+127.0.0.1 - frank [10/Oct/2000:13:55:36 -0700] "GET /apache_pb.gif HTTP/1.0" 200 2322
+```
+
+### Formato combinado
+
+También es posible encontrar **bitácoras** en **formato de registro combinado** donde se agrega más información al formato común.
+
+Este formato se indica en el archivo de configuración de la siguiente manera:
+
+> `LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-agent}i\"" combined`
+
+Donde:
+
+- `%{Referer}i`: Hace referencia al servidor de donde proviene este cliente.
+- `%{User-agent}i`: Hace referencia al *User-agent* (Identificador) del navegador del cliente.
+
+```log
+127.0.0.1 - frank [10/Oct/2000:13:55:36 -0700] "GET /apache_pb.gif HTTP/1.0" 200 2322 "http://www.example.com/index.html" "Mozilla/4.08 [en] (Win98; I ;Nav)"
+```
 
 # Enlaces
 
