Completo fundamentos de Windows, inicio de AD

--- a/HFC/SistemasWindows/apuntes/HFC26_08_2024.md
+++ b/HFC/SistemasWindows/apuntes/HFC26_08_2024.md
@@ -1,13 +1,6 @@
 [<- Índice](../SistemasWindows.md)
 # Introducción a Sistemas Windows
 
-## Agenda
-
-- Windows / AD
-- PowerShell
-- IIS
-- CA
-
 ## Introducción AD
 
 *Active Directory (AD)* es un **servicio de directorio para entornos de red de Windows**.
@@ -16,101 +9,94 @@ Es una **estructura jerárquica distribuida** que permite la administración cen
 
 > Es una herramienta fundamental en la administración de redes basadas en *Windows*.
 
-Ofrece herramientas fundamentales como:
+#### AD y las empresas
 
-- **Gestion de Identidades y Accesos**: Permite almacenar
+Alrededor del 95% de las Empresas de Fortune 500 ejecutan *Active Directory*, lo que convierte a AD en un foco clave para los atacantes.
 
-### AD y las empresas
+Es muy probable encontrarse con entornos de *AD* de todos los tamaños como profesionales de la ciberseguridad por lo que es importante familiarizarse con este.
 
-Alrededir del 95% de las Empresas de Fortune 500 ejecutan *Active Directory*, lo que convierte a AD en un foco clave para los atacantes.
+## Objetos de un Active Directory
 
-Es muy probable encontrarse con entornos de *AD* de todos los tamaños como profesionales de la ciberseguridad por lo que 
+> El ***Active Directory*** cataloga todos los recursos de información que administra como ***objetos***, por ejemplo, usuarios, grupos, computadoras, impresoras, etc.
 
-### ¿Cómo estamos trabajando?
+Algunos de los más destacados son:
 
-- **Recursos**: Tenemos que administrar recursos de una organización
-	- Administración: Debe ser centralizadas
+#### Usuarios
 
-### Active Directory Domain Services
+> Sin duda, uno de los objetos más comúnes de un **AD**. Forman parte de los objetos que se concideran como **"security principals"**, que implica que pueden ser autenticados por el dominio y recibir privilegios sobre otros recursos como impresoras por ejemplo.
 
-- Una forma de organizar entes
-- Un directorio es una estructura jerarquica que organiza elementos y recursos de una red
+Este tipo de objetos puede ser utilizado por 2 tipos de **entidades**:
 
-### WIndows Server
+- **Personas**: El más intuitivo, pues la mayoría de usuarios representan personas que requieren acceder a la red, como trabajadores.
+- **Servicios**: También se pueden definir usuarios para ser utilizados en servicios específicos automáticamente, de modo que podamos brindarles los privilegios mínimos a este para el servicio que desempeñara.
 
-Es una línea de productos para servidores
+#### Máquinas
 
-#### Roles y Caracteristicas
+> Por cada computadora incluida en el *Active Directory* se crea un objeto **Máquina**, también considerado como **security principal**, pues automáticamente se crea una cuenta para la propia computadora en la propia computadora (brutal) con permisos de **adminstrador local**.
 
-##### Roles
+#### Grupos de Seguridad
 
-- Son programas
+> Los grupos de toda la vida para la gestión de usuarios, solo que sobre todo el **dominio** del **AD**. Igualmente considerados **Security Principals** pues poseen privilegios sobre recursos del dominio.
 
-### Pero antes... Windows (o MS/DOS ?)
+Este tipo de grupos puede estar compuesto tanto de **usuarios** como de **máquinas** e incluso de **otros grupos**.
 
-Windows es el nombre de una **familia de distribuciones de software**
+Muchos de estos grupos son creados por defecto, con todo y los privilegios que estos conllevan, por ejemplo:
 
-Estan basados en Windows NT
+- **Administradores de Dominio**: Usuarios con privilegios de administrador sobre el dominio completo.
 
-### Arquitectura generalizada
+- **Operadores de Servidor**: Usuarios capaces de administrar un controlador de dominio, incapaces de modificar privilegios de grupos.
 
-- Modo usuario: Aqui corren los programas que utilizamos cotidianamente
-- Modo Kernel
-- Hipervisores
+- **Operadores de Respaldo**: Usuarios capaces de acceder a cualquier archivo del dominio, pensados para realizar un respaldo del sistema.
 
-Para proteger las aplicaciones de usuario de acceder y/o modificar datos críticos del sistema operativo, *Windows* utiliza el **modo de usuario** y **modo kernel**.
+- **Operadores de Cuenta**: Usuarios que pueden crear y modificar usuarios en el dominio.
 
-- El **modo kernel** se refiere a un modo de ejecución del procesador sin restricciones
+- **Usuarios de Dominio**: ==Todos== los usuarios existentes en el dominio.
 
-### Modo Kernel en contexto de Hypervisor
+- **Computadoras de Dominio**: Incluye ==todas== las computadoras existentes en el dominio.
 
-Para proporcionar sevicios de virtualización, casi todas las soluciones modernas emplean el uso de un *hipervisor*.
+- **Controladores de Dominio**: Todos los ordenadores que fungen como ==controladores de dominio== dentro de este dominio.
 
-Es un componente especializado y altamente privilegiado que permite la virtualización y el aislamiento de todos los recursos de la máquina, desde la memoria virtual a la física, hasta las interrupciones del dispositivo.
+## Gestion de Usuarios y Computadoras
 
-#### Hipervisor tipo 1
+> Para configurar los usuarios, grupos y computadoras, necesitamos estar autenticados en el dominio y ejecutar la utilidad *"Active Directory Users and Computers"* desde la barra de busqueda.
 
-Nativo o bare metal es *software* que se ejecuta directamente sobre el *hardware* físico.
-Las máquinas virtuales se ejecutan sob
+Esto nos abrira un programa que nos permite visualizar todos los usuarios y su jerarquía, además de administrar sus características.
 
-#### Hipervisor tipo 2
+Cabe recalcar que estos objetos se encuentran organizados mediante ***OUs*** (*Organizational Units*) las cuales sirven como clasificaciones para los objetos con políticas similares.
 
-Corre sobre el sistema operativo
+Aunque similar a los grupos, **únicamente** se puede pertenecer a una sola **OU** y en estas **típicamente** se busca reflejar la estructura de la organización en la vida real y adecuar las necesidades de los recursos.
 
-**Windows Internals 7 Part 1**
+Por ejemplo, supongamos que tenemos una serie de usuarios destinados a internos de **IT**. Inicialmente todos están en los mismos **grupos de seguridad** porque necesitan los mismos privilegios en el dominio aunque después se les puedan asignar a más, sin embargo, pueden estar en distintas **OU** según sea el área en la que estén asignados, como **Ventas**, **Seguridad**, **Desarrollo**, etc y esta es **única**.
 
-### WIndows Registry
+Algunas **OU** son creadas por defecto junto con el **Active Directory** como son:
 
-## Práctica 1
-
-Instalar *Windows Server* en *VMware*
-
-#### Antecedentes
-
-- *VMware Pro Instalado*
-- *Windows Server 2022 ISO*
-
-#### Conceptos claves
-
-- Windows
+- **Builtin**: Contiene todos los grupos por defecto disponibles para cualquier dispositivo.
+- **Computers**: Contiene cualquier ordenador que se una al dominio, aunque pueden ser recolocadas si se necesita.
+- **Domain Controllers**: La **OU** por defecto que contiene a los controladores de dominio de la red.
+- **Users**: Usuarios y grupos por defecto presentes en todo el dominio.
+- **Managed Service Accounts**: Conteien todas las cuentas utilizadas por servicios en todo el dominio.
 
 ## Estructuras en AD
 
-Estructura lógica y Estructura física
+Es importante comprender como funcionan conjuntamente los componentes físicos y lógicos de un *Active Directory*. Aunque tal vez no tan importantes ahora mismo, los componentes más destacados de esta infraestructura son:
+
+### Estructura Física
+
+- ***Controladores de Dominio***
+- ***Almacén de Datos***
+- ***Partitions***
+- ***Global Catalog***
+- ***Site***
+- ***Subnet***
 
 ### Estructura lógica
 
-- Schema
-- Domain (Dominios)
-- Domain Trees
-
-### Conceptos
-
-**Objeto**: 
-**Dominio**:
-**OUs**:
-**Trees**:
-**Forest**:
+- ***Schema***
+- ***Dominios***
+- ***Árboles***
+- ***Bosques***
+- ***OU's***
+- ***Contenedores***
 
 # Enlaces
 
