Windows hasta cmd y reorganizado

--- a/HFC/SistemasWindows/apuntes/HFC27_08_2024.md
+++ b/HFC/SistemasWindows/apuntes/HFC27_08_2024.md
@@ -50,7 +50,12 @@ Equipos principalmente utilizados para proveer servicios a otros usuarios del do
 Como vimos anteriormente, los ordenadores encargados de brindar el servicio de *Active Directory* y la sede de la administración e información del dominio.
 
 ## Gestión de Políticas
-### GPO (Group Policy Objects)
+
+> Las **políticas** son una especie de restricciones que deseamos habilitar para ciertos equipos o usuarios, de manera que no puedan realizar acciones que no tengan previsto según su objetivo en la organización.
+
+Estan estrechamente relacionadas con las **OU** ya que las **políticas** se aplican principalmente sobre **OUs**.
+
+#### GPO (Group Policy Objects)
 
 > Recordemos que una de las ideas de la organización mediante **OU** es facilitar la aplicación de ***políticas*** a estas según se requieran.
 
