--- a/HFC/SistemasWindows/apuntes/HFC28_08_2024.md
+++ b/HFC/SistemasWindows/apuntes/HFC28_08_2024.md
@@ -35,14 +35,16 @@ El proceso que se sigue es aproximadamente el siguiente:
 
 Se basa en un mecanismo de **desafío-respuesta** utilizando *hashes* NTLM.
 
-1. El cliente envía una solicitud de autenticación al servidor del que desea un servico o acceso.
-2. El servidor genera un número aleatorio y se lo envia como un ***desafío*** al cliente.
+1. El cliente envía una **solicitud de autenticación** al **servidor** del que desea un servico o acceso.
+2. El **servidor** genera un número aleatorio y se lo envia como un ***desafío*** al cliente.
 3. El cliente combina su propio *hash NTLM* y otra información acordada o configurada en el dominio y la envía como respuesta al servidor para su verificación.
 4. El servidor a su vez, solicita al **controlador de dominio** que calcule su propia respuesta con los datos que el posee.
 5. Una vez recibidas ambas respuestas, el servidor las verifica, si ambas corresponden el cliente se considera **autenticado** de lo contrario, se le niega el servicio o acceso. 
 
-Destaco en su momento porque no era necesario envíar los *hashes* del usuario a través de la red para llevar a cabo la autenticación.
+Este **protocolo de autenticación** destaco en su momento porque no era necesario envíar los *hashes* del usuario a través de la red para llevar a cabo la autenticación.
+
+%% Revisar Autenticación LDAP, Basic y DIgest  %%
 
 # Enlaces
 
-[<- Anterior](HFC26_08_2024.md) | [Siguiente ->](HFC29_08_2024.md)
+[<- Anterior](HFC27_08_2024.md) | [Siguiente ->](HFC29_08_2024.md)
