--- a/HFC/SistemasWindows/apuntes/HFC29_08_2024.md
+++ b/HFC/SistemasWindows/apuntes/HFC29_08_2024.md
@@ -1,74 +1,63 @@
 [<- Índice](../SistemasWindows.md)
-## Cubo de la ciberseguridad
-#### Datos en proceso
-Se refiere a los datos pasando por una manipulación **local** de los datos
+# Arboles, Bosques y Relaciones de Confianza
 
-#### Datos en tránsito
-Se refiere a cuando los datos están viajando por la red del dispositivo.
+Ahora que conocemos la información más importante sobre los dominios de *Active Directory*, podemos introducir una serie de conceptos importantes sobre la organización de dominios.
 
-## Autenticación en AD DS (AD DS y LDAP)
+### Árboles
 
-*LDAP* *Lightweight Directory Access Protocol* es un protocolo utilizado para manipular o modificar objetos en un directorio.
+> Según aumente el tamaño y necesidades de la organización, podríamos necesitar de más de un dominio para la correcta administración de los recursos de esta. En esos casos, *Active Directory* permite la creación de ***subdominios***, cada uno con sus propios usuarios, grupos y políticas, pero accesible para los ***dominios padres*** en caso de que se requiera de su información o recursos. A esta agrupación de dominios se le llama ***Árboles*** y es una de las estructuras más importantes de un *Active Directory* pues es capaz de representar a una organización completa.
 
-Es un mecanismo de unicamente de autentificación, solo le interesa autentificarte pero no la encriptación o seguridad de los datos,.
+Algunas de las ventajas principales de dividir la organización en varios dominios es:
 
-Para eso se complementa con *SSAL*.
+- ***Replicación de datos***: Si se tienen muchisimos recursos y se necesitan distribuir a lo largo de todo el **Árbol**, repartirla entre varios dominios ayuda a la disminución de carga en la red, en lugar de que todos tengan que acceder al mismo dominio para obtener los datos, además de mejorar el tiempo de respuesta para el equipo solicitante.
 
-### AD y LDAP
+- ***Mejor organización***: Podemos segmentar de mejor manera las áreas de la organización y otorgar los permisos e información adecuadas para estas.
 
-- **389** Para acceso estandar
-- **636** Para trafico TLS
+- ***Autonomía admnistrativa***: Proporciona control sobre sus recursos a cada dominio, mejorando la gestión y el rol de cada dominio, pero con el apoyo de un **dominio padre** cuando este lo necesite.
 
-Permite 2 tipos de autentificación:
+Estas estructuras dan lugar a un nuevo rol en la organización, ***Enterprise Admins*** que son usuarios con privilegios sobre todo el **Árbol**, aun por encima de cada ***Domain Admin*** en la organización.
+ 
+### Bosques
 
-- **Autentificación simple**
-- **Autentificación SSAL**
+> Llendonos aún más allá de los **Árboles**, por ejemplo, cuando una empresa adquiere otra, es poco probable que decida adecuar todo el sistema administrativo bajo su propio **Árbol**, pues es impráctico, complejo y tedioso. La idea entonces, es simplemente ==relacionar== ambos **Árboles** respetando sus respectivas administraciones, de ahi nace el concepto de ***Bosque***, como la relación de varios **Árboles**.
 
-## Kerberos
+De igual manera, la organización mediante distintos **Árboles** es beneficiosa porque brinda:
 
-Es otro protocolo de autentificación sin estado que manda tickets en lugar de transmitir contraseñas de usuario a través de la red.
+- ***Aislamiento administrativo***: En este caso, los **Árboles** son completamente independientes pues no se adecuan o integran bajo la administración de los otros **Árboles**. Una cualidad muy beneficiosa cuando cada **Árbol** trata con recursos completamente distintos.
+- ***Distintos enfoques administrativos***: Según lo necesite, cada **Árbol** puede implementar su propio enfoque **administrativo** sin perjudicar a los demás
 
-Sabemos que los protocolos pueden autentificarte por 3 principales medios
+### Relaciones de Confianza
 
-- Por lo que sabes (Contraseña, preguntas de recuperación)
-- Por lo que tienes (Token, clave, tarjeta)
-- Por lo que eres (Retina, huella dactilar)
+Antes, ya hemos hablado de **relacionar** árboles y dominios, existe una definición formal de esto denominada ***Relaciones de Confianza***.
 
-La idea principal es que los usuarios con tickets pueden presentarlos a un servicio para demostrar que ya se han autenticado en la red anteriormente, y por lo tanto estan autorizados para usarlo.
+> Las ***Relaciones de Confianza*** son un mecanismo de ==autorización de acceso sobre recursos de distintos dominios==. Poseen el objetivo de facilitar las interacciones entre estos sin necesidad de intermediarios o autenticaciones complejas.
 
-### Componentes del protocolo
+Poseen principalmente 2 propiedades:
 
-#### - Involucrados
+- ***Transitividad***: Al establecer una **relación de confianza transitiva** de un dominio A hacia un dominio B, estamos automáticamente aceptando una relación de confianza con todos los dominios en los que confia B.
+- ***Dirección***: Las relaciones de confianza pueden ser **unidireccionales** o **bidireccionales**. En caso de ser unidireccionales, debemos establecer que dominio confia en quien, es decir, que dominio confia sus recursos a quien.
 
-- **Cliente**: El cliente que quiere acceso a un servicio
-- **KDC (Key Distribution Centre)**: Un servidor autentificador de *AD DS*
-- **Servidor de aplicación**: El servidor al que el cliente quiere acceder
+Entonces, existen varios tipos principales de ***Relaciones de Confianza***.
 
-#### - 3 partes del contrato
+##### Relaciones de Confianza de Bosque
+Típicamente, es una relación de confianza entre **Controladores de Dominio de algún árbol** entre 2 **Bosques distintos**. Es una relación **no-transitiva** y pueden ser **unidireccionales o bidireccionales** según se necesite.
 
-- El usuario consigue un *TGT* (*Ticket Granting Ticket*).
-- El usuario consigue un *TGS* (*Ticket Granting Server*).
-- El usuario presenta el *TGS* para acceso al servicio.
+##### Relaciones de Confianza de Árbol
+Es la relación de confianza entre los **Controladores de Dominio principales** de 2 Árboles distintos, con este tipo de relaciones nace un Bosque. Esta relación es **transitiva** y **bidireccional**.
 
-1. El *KDC* es legítimo
-2. Usuario confia en (1)
-3. El servicio confia en (1)
+##### Relacion de Confianza Padre-Hijo
+Se crea automáticamente entre 2 dominios directamente relacionados de un Árbol, es decir, un **dominio padre** y un **subdominio**. Es una relación de confianza **transitiva** y **bidireccional**.
 
-### Pasos
+##### Relaciones de Confianza de Acceso Directo (Shortcut)
+Es una **Relación de Confianza** entre cualesquiera 2 dominios de un mismo **Bosque** que no esten relacionados directamente, usualmente son configuradas con el objetivo de agilizar la comunicación entre ellos, desechando la necesidad de dirigir la comunicación a través de todos los dominios intermedios.
 
-**KRB_AS_REQ**: Contiene el identificador del usuario, el id del servidor, el ip addr del usuario y 
+##### Relaciones de Confianza Externas
+Es una **Relación de Confianza** entre cualesquiera 2 dominios de bosques distintos donde no se ha establecido una **Relación de confianza de bosque** entre ellos. No suele ser **transitiva** y puede ser **unidireccional** o **bidireccional**.
 
-**KRB_AS_REP**: Contiene el *TGT*, cuando lo genero, user IP addr y el tiempo de vida del *TGT* y viene cifrado con una llave secreta del cliente.
+##### Relaciones de Confianza de Dominio Kerberos
+Es una **Relación de Confianza** entre cualquier dominio de un *Active Directory* y un dominio de *Kerberos*, usualmente con el objetivo de incluir los servicios de *Kerberos* en el *AD*. Estas relaciones se necesitan pues *Kerberos* se implementa con un servicio de directorio distinto a *Active Directory* por lo que este último lo considera externo a su dominio.
 
-## NTLM
-
-Active Directory utiliza otros métodos de autentificación. Entre ellos se incluyen
-
-## Basic y Digest
-
-Basic solo envia las credenciales en base64 al controlador de dominio.
-
-Digest es exactamente lo mismo que **Basic** pero con MD5.
+![relaciones-confianza.png](imagenes/relaciones-confianza.png)
 
 # Enlaces
 
