--- a/HFC/SistemasWindows/apuntes/HFC29_08_2024.md
+++ b/HFC/SistemasWindows/apuntes/HFC29_08_2024.md
@@ -61,4 +61,4 @@ Es una **Relación de Confianza** entre cualquier dominio de un *Active Director
 
 # Enlaces
 
-[<- Anterior](HFC28_08_2024.md) | [Siguiente ->](HFC30_08_2024.md)
+[<- Anterior](HFC28_08_2024.md) |
