--- a/HFC/WebHacking/apuntes/HFC25_09_2024.md
+++ b/HFC/WebHacking/apuntes/HFC25_09_2024.md
@@ -84,20 +84,45 @@ Las webs actualmente están principalmente compuestas por estos 3 tipos de archi
 
 Aunque los desarrolladores web utilicen *Typescript*, *Angular*, *Wordpress*, etc; al final del día estas herramientas transpilan sus lenguajes a estos 3 archivos para que funcione correctamente la página web.
 
-# HTTP y HTTPS
+# HTTP
 
-> La diferencia es la palabra **S**ecure, principalmente porque el contenido se envía cifrado
+> *HTTP* es un protocolo de aplicación mayormente utilizado para acceder a recursos en el *Internet*.
+
+El término ***hipertexto*** hace referencia a que el texto contiene enlaces a otros recursos además de que este tipo de texto es fácilmente interpretado.
+
+La comunicación *HTTP* se basa en un modelo cliente-servidor, donde el **cliente** solicita al **servidor** los recursos.
+
+En general, estas solicitudes se realizan a un ***FQDN*** (*Fully Qualified Domain Name*) mediante una ***URL*** (*Uniform Resource Locator*). Accediendo así al sitio web deseado.
 
 ## ¿Porqué?
 
-- Protocolo utilizado para comunicación entre clientes y servidores.
 - Aplicaciones web
 - APIs
 - Aplicaciones móviles
 
 > La diferencia entre aplicaciones *web* y aplicaciones es que las aplicaciones regulares, usualmente son desarrolladas para un sistema objetivo, como celulares, computadoras Windows, etc. Sin embargo las aplicaciones web corren en cualquier navegador de cualquier sistema.
 
+## URL
+
+> Diariamente utilizamos *URL*'s para navegar por el internet, pero pocas veces nos enfocamos en las partes que la conforman.
+
+Sea la *URL*: http://admin:password@inlanefreight.com:80/dashboard.php?login=true#status
+
+Podemos dividirla como:
+
+| Componente       | Ejemplo           | Descripción                                                                                                                                                                                                              |
+| ---------------- | ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| **Protocolo**    | *http://*         | Indican el **protocolo de aplicación** mediante el cual se establece la comunicación. Aunque lo más común es *http* y *https* no hay que olvidar que podemos interactuar con muchos más protocolos mediante *URL*'s      |
+| **Credenciales** | *admin:password@* | Indican las credenciales necesarias para autenticarse con el servidor, de no ser necesarias se omite esta componente.                                                                                                    |
+| **Dominio/IP**   | inlanefreight.com | Indica a que servidor deseamos conectarnos                                                                                                                                                                               |
+| **Puerto**       | :80               | Indica a que puerto deseamos conectarnos. En caso de omitirse, se intenta conectar al puerto por defecto del protocolo específicado. (80 para *http* por ejemplo)                                                        |
+| **Recurso**      | /dashboard.php    | Indica que recurso estamos solicitando                                                                                                                                                                                   |
+| **Parámetros**   | ?login=true       | Consiste en parejas de parametros y valores, usualmente con información útil para el servidor. Esta sección no siempre esta presente además de que es el servidor el que suele agregar estos parametros automáticamente. |
+| **Fragmentos**   | \#status          | Hacen referencia a secciones dentro del recurso solicitado y son interpretados directamente por nuestro navegador. Esta sección tampoco es obligatoria y también es gestionada por el servidor                           |
+
 ## Petición HTTP
+
+> Por detrás de una *URL*, se realiza una petición *HTTP* al servidor en el formato adecuado para que este lo entienda. Los componentes de esta son:
 
 - Método
 - Recurso
@@ -164,11 +189,29 @@ Server: Apache/2.4.57 (Debian)
 
 - *Set-Cookie*: Cadena a almacenar en el navegador. Generalmente usada como identificador de sesión.
 
+## Flujo HTTP
+
+Ya en conocimiento del funcionamiento básico de *HTTP*, podemos adentrarnos en el flujo de la aplicación, incorporando todos los conceptos conocidos.
+
+El siguiente diagrama entonces, hace referencia al primer contacto con un servidor web.
+
+![HTTP-flow.png](imagenes/HTTP-flow.png)
+
+1. En primer lugar, el usuario accede a la *URL* http://inlanefreight.com/ en su navegador, que funge como cliente.
+2. Entonces se realiza una solicitud *DNS* al servidor correspondiente, con el nombre de dominio *inlanefreight.com* donde se recupera la *IP* correspondiente y se almacena en caché para futuras comunicaciones.
+3. Con ese conocimiento, el cliente realiza una solicitud *HTTP* con la información de la *URL* al servidor con la dicha IP asignada.
+4. Entonces el servidor web, devuelve el recurso solicitado con un código de exito *200*.
+5. Finalmente, el navegador web renderiza la respuesta obtenida para ser recibida adecuadamente por el usuario.
+
 ## HTTP vs HTTPS
 
+> *HTTPS* es una versión de *HTTP* que incorpora cifrado durante la comunicación para una mayor protección de la confidencialidad.
+
+Hoy en día es el protocolo más utilizado en el Internet, dada a esta mejora que implementa
+
 - En esencia, utilizan la misma sintaxis
-- Puertos tcp: 80 y 443
-- *HTTPS* es la versión "segura" de *HTTP*, pues como dijimos anteriormente, añade una capa de cifrado.
+- Puerto por defecto tcp: 443
+- *HTTPS* se considera una versión "segura" de *HTTP*, pues como dijimos anteriormente, añade una capa de cifrado.
 
 ### HTTPS
 
