HTTPS repasado HTB

--- a/HFC/WebHacking/apuntes/HFC25_09_2024.md
+++ b/HFC/WebHacking/apuntes/HFC25_09_2024.md
@@ -1,7 +1,11 @@
 [<- Índice](../WebHacking.md)
 # Anatomía de una aplicación web
 
-## Client-side (Frontend)
+> Las aplicaciones web son aplicaciones interactivas mediante el protocolo *HTTP* que pretenden ofrecer funcionalidades y soluciones especificas para un grupo de usuarios.
+
+Dado que el protocolo *HTTP* es una comunicación modelo cliente-servidor, tiene 2 componentes principales.
+
+### Client-side (Frontend)
 
 Toda la interfaz del usuario
 
@@ -38,8 +42,6 @@ Servidores web comunes:
 - Wordpress
 - Drupal
 
-> Vamos a utilizar muchisimo **HTTP**, ya que es el principal protocolo de transferencia de datos.
-
 ### Otras consideraciones de arquitectura
 
 - CDNs: Hacer entrega de contenido estático (que casi nunca cambia)
@@ -52,7 +54,7 @@ Servidores web comunes:
 
 ### ¿Donde implementamos la seguridad *Frontend* o *Backend*?
 
-Principalmente en el **Backend** pero nunca está de más implementar seguridad también en el *Frontend*.
+> Principalmente en el **Backend** pero nunca está de más implementar seguridad también en el *Frontend*.
 
 ## Repaso: *HTML*, *CSS*, *JavaScript*
 
@@ -80,7 +82,7 @@ Principalmente en el **Backend** pero nunca está de más implementar seguridad 
 
 ### ¿Porque es importante este repaso?
 
-Las webs actualmente están principalmente compuestas por estos 3 tipos de archivos para funcionar correctamente.
+Las aplicaciones web actualmente están principalmente compuestas por estos 3 tipos de archivos para funcionar correctamente.
 
 Aunque los desarrolladores web utilicen *Typescript*, *Angular*, *Wordpress*, etc; al final del día estas herramientas transpilan sus lenguajes a estos 3 archivos para que funcione correctamente la página web.
 
@@ -148,7 +150,7 @@ Connection: close
 user=admin&pass=123456
 ```
 
-### Cabeceras de petición HTTP
+#### Cabeceras de petición HTTP
 
 > Sirven a modo de metadatos de las peticiones, así como para configurar la comunicación.
 
@@ -179,7 +181,7 @@ Server: Apache/2.4.57 (Debian)
 ...
 ```
 
-### Cabeceras de respuesta
+#### Cabeceras de respuesta
 
 > Sirven a modo de metadatos de las respuestas, así como para configurar la comunicación.
 
@@ -203,23 +205,52 @@ El siguiente diagrama entonces, hace referencia al primer contacto con un servid
 4. Entonces el servidor web, devuelve el recurso solicitado con un código de exito *200*.
 5. Finalmente, el navegador web renderiza la respuesta obtenida para ser recibida adecuadamente por el usuario.
 
-## HTTP vs HTTPS
+# HTTPS
 
-> *HTTPS* es una versión de *HTTP* que incorpora cifrado durante la comunicación para una mayor protección de la confidencialidad.
+Durante mucho tiempo, una de las principales debilidades de *HTTP* y de muchos protocolos de aplicación más, fue que los datos se transferian como texto claro, es decir, sin cifrar.
 
-Hoy en día es el protocolo más utilizado en el Internet, dada a esta mejora que implementa
+Esto representaba un gran impacto a la confidencialidad pues de interceptarse el tráfico de red se tenía el acceso a toda la conversación.
 
-- En esencia, utilizan la misma sintaxis
-- Puerto por defecto tcp: 443
-- *HTTPS* se considera una versión "segura" de *HTTP*, pues como dijimos anteriormente, añade una capa de cifrado.
+Para brindar una solución surgió *SSL* que más tarde evolucionaría a *TLS*, un protocolo de cifrado adaptable a los protocolos de aplicación.
 
-### HTTPS
+> ***HTTPS*** fue la variante de *HTTP* surgida de incorporar *TLS/SSL* al protocolo. En esta variante todo el tráfico se transifere cifrado después de que el cliente y servidor demuestren su autenticidad y establezcan el cifrado adecuado.
+
+De este modo, incluso si un atacante intercepta la comunicación, la comunicación no tendrá ningún sentido para él.
+
+Por esta razón, actualmente es el protocolo más utilizado en el Internet, desplazando a HTTP pues es una gran medida de seguridad para la protección de nuestros datos.
 
 - Cifra las comunicaciones entre cliente y servidor
 - También sirve para autentificar un servidor a través de su certificado *SSL*/*TLS*
 
 - Que un servidor este configurado para utilizar *HTTPS*, no significa que la aplicación sea segura. (Puede seguir siendo vulnerable a muchas cosas)
 - Los algoritmos usados para las comunicaciones pueden ser vulnerables (Por ejemplo, *Heartbleed*)
+
+### HTTP vs HTTPS
+
+Observemos la captura (mediante *Wireshark*) de una captura *HTTP*:
+
+![HTTP-request.png](imagenes/HTTP-request.png)
+
+Como se puede ver, observamos en **texto claro** las credenciales enviadas al servidor web. No se presenta inguna medida que nos impida exfiltrar esta información, posibilitando un posterior ataque.
+
+Por otra parte, observemos una solicitud *HTTPS*:
+
+![HTTPS-request.png](imagenes/HTTPS-request.png)
+
+En esta ocasión, la información transferida se encuentra cifrada, imposibilitando la extracción de información.
+
+## Flujo HTTPS
+
+En cuanto al flujo de la aplicación, se hace evidente la necesidad de establecer las bases de la comunicación cifrada, por lo que ahora el flujo podría verse de la siguiente manera.
+
+![HTTPS-flow.png](imagenes/HTTPS-flow.png)
+
+1. Posterior a la consulta *DNS*, el navegador (cliente) realiza una conexión HTTP con el servidor mediante el puerto por defecto, 80.
+2. El servidor responde con un código de redirección a la *URL* adecuada, es decir, aquella con el protocolo *https://* especificado.
+3. El cliente inicia una nueva conexión en el puerto por defecto *HTTPS*, 443. Además, realiza una fase llamada *"Client Hello"* donde indica al servidor, entre otras cosas, todos los algoritmos de cifrado disponibles que soporta el cliente.
+4. El servidor responde con una fase denominada *"Server Hello"*, donde, entre otras cosas, selecciona un algoritmo de cifrado para la comunicación.
+5. Una vez de acuerdo, cliente y servidor realizan un **intercambio de llaves**. El servidor brinda una llave de cifrado pública, para que el cliente pueda cifrar con esta la llave simétrica de la comunicación y enviarla de forma segura al servidor, que la desencripta con su llave privada. Adicionalmente el servidor envia un certificado CA para confirar su validez.
+6. Finalmente, se realiza un *handshake* cifrado final para confirmar que la encriptación y transferencia de datos está funcionando correctamente.
 
 # Herramientas comunes
 
